# todo-cli

./: .gitignore  README.md  aaa.json  aaaa.json  pyproject.toml  scores.json  wuyihan.json  www.json
.github/workflows/: ci.yml
src/demo_project/: argparses.py  cli.py  grade.py  main.py  massage.py  models.py  service.py  states.py  storage.py  www.py
src/demo_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/my_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.masage.py  test.storage.py  test_cli.py  test_grade.py  test_main.py  test_models.py  test_service.py  test_states.py  test_storage  test_storage.py
