[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "My first python project"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]

testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E","F","I"]

[tool.ruff.format]
quote-style = "double"