[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-project"
version = "0.1.0"
description = "A simple todo  command line app"
requires-python = ">=3.10"

[project.scripts]
todo = "demo_project.main:main2"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E","F","I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.in_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true