[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wuyihan-python-project"
version = "0.1.0"
description = "my python practice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project-scripts]
todo = "demo_project.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E","I","F","B","UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]


[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_project"]
